# Kurs3

./: README.md  pyproject.toml
src/: models.py
test/: test_models.py
